src/cli/snapshots/rtx__cli__local__test__local.snap
---
source: src/cli/local.rs
expression: stdout.content
---
#python 3.11.1 3.10.9 # foo
shellcheck 0.9.0
shfmt 2.6.4 # test comment
#nodejs 18.13.0
nodejs system

